# scratchpad

./: README.md  cdt_formatter.xml  java_formatter.xml
SocketInterrupt/: .project
SocketInterrupt/src/: SocketInterrupt.java  SocketThread.java  StateMachine.java
UnknownTypeList/: .project
UnknownTypeList/src/: TypeA.java  TypeB.java  TypeBase.java  UnknownTypeList.java
asiolib/: CMakeLists.txt
async_future/: .cproject  .project  async_future.cpp
async_locking_queue/: .cproject  .project  LockingQueue.hpp  LockingQueue_new.hpp  async_locking_queue.cpp
async_to_sync/: CMakeLists.txt  async_to_sync.cpp
beast/: CMakeLists.txt  Download.cpp  Download.hpp  HttpClient.cpp  HttpClient.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  Url.cpp  Url.hpp  beast.cpp  memory.hpp  types.hpp
bitlength/: CMakeLists.txt  bitlength.cpp
callback_chaining/: .project  callback_chaining.cpp
child_process/: .gitignore  CMakeLists.txt  child_process.cpp
cmake_defines/: CMakeLists.txt  cmake_defines.cpp
cmake_libs/src/: CMakeLists.txt
cmake_libs/src/bar/: Bar.cpp  Bar.hpp  CMakeLists.txt
cmake_libs/src/baz/: Baz.cpp  Baz.hpp  CMakeLists.txt
cmake_libs/src/exe/: CMakeLists.txt  dep_tester.cpp
cmake_libs/src/foo/: CMakeLists.txt  Foo.cpp  Foo.hpp
code_test/: CMakeLists.txt  code_test.cpp
constance/: CMakeLists.txt  constance.cpp
coproto/: .cproject  .project  Director.cpp  Director.hpp  DirectorImpl.cpp  DirectorImpl.hpp  DriverStub.cpp  DriverStub.hpp  IDirector.hpp  LockingQueue.hpp  QueueManager.hpp  coproto.cpp  coproto_handle.hpp  coproto_handler.hpp  coproto_main.cpp  coproto_op.hpp  coproto_service.hpp  coproto_service_impl.hpp
coproto-client/: .cproject  .project  DirectorStub.cpp  DirectorStub.hpp  DriverImpl.cpp  DriverImpl.hpp  IDriver.hpp  coproto-client_main.cpp
coro2/: CMakeLists.txt  coro2.cpp
coroutine/: .cproject  .project  coroutine.cpp  notes.txt
dir_iterator/: .cproject  .project  dir_iterator.cpp
display_date_time/: .gitignore  CMakeLists.txt  display_date_time.cpp
dlopen_timer_lib/: .cproject  .project  dlopen_timer_lib.cpp
dlopen_timer_main/: .cproject  .project  dlopen_timer_main.cpp
exit_callback/: CMakeLists.txt
exit_callback/lib/: CMakeLists.txt  DumbExitPlugin.cpp  DumbExitPlugin.hpp
fd_writer/: CMakeLists.txt  fd_writer.cpp
fmt_test/: CMakeLists.txt  conanfile.py
fmt_test/src/: fmt_test.cpp
fmt_test/test_package/: conanfile.py
function_pointer/: .cproject  .project  CMakeLists.txt  function_pointer.cpp
future_work/: CMakeLists.txt  future_work.cpp
handler_posting/: .cproject  .project  BasicTask.hpp  BasicTask2.hpp  BasicTask3.hpp  Task.hpp  TaskFactory.hpp  handler_posting.cpp
index_replace/: CMakeLists.txt  index_replace.cpp
io_service_fork/: .cproject  .project  io_service_fork.cpp
ipv4_protocol/: CMakeLists.txt  ipv4_protocol.cpp
iterators/: .cproject  .project  iterators.cpp
json_exception/: CMakeLists.txt  conanfile.py
json_exception/src/: json_exception.cpp
json_exception/test_package/: conanfile.py
lambda_capture/: lambda_capture.cpp
lockfree/: .project  lockfree.cpp
lua_time/: CMakeLists.txt  lua_time.cpp  test.lua
map_iterator/: .cproject  .project  map_iterator.cpp
move_test/: CMakeLists.txt  move_test.cpp
mqtt_cpp_test/: .gitignore  CMakeLists.txt  mqtt_cpp_test.cpp
multi_index/: .cproject  .project  DeviceType.cpp  DeviceType.hpp  DeviceUpdateInfo.cpp  DeviceUpdateInfo.h  DeviceUpdateInfo.hpp  InitState.cpp  InitState.hpp  State.cpp  State.hpp  StopState.cpp  StopState.hpp  multi_index.cpp
pipes/: .gitignore  CMakeLists.txt  pipes.cpp
process_restrictions/: 3.5.0-ProjectRestrictions.json  CMakeLists.txt  process_restrictions.cpp
program_name/: CMakeLists.txt  program_name.cpp
protoc-gen-c4net/: .cproject  .project  C4NetGenerator.cpp  C4NetGenerator.hpp  protoc-gen-c4net.cpp
recursive_variant/: CMakeLists.txt  recursive_variant.cpp
regex_test/: CMakeLists.txt  regex_test.cpp
rpc_cycle/directord/: .cproject  .project  directord.cpp
serial_box/: Bar.hpp  Base.hpp  CMakeLists.txt  Foo.hpp  serial_box.cpp
shared_ptr_swap/: .cproject  .project  CMakeLists.txt  shared_ptr_swap.cpp
signal_rs/: Cargo.toml
signal_rs/src/: main.rs
soap/: device_upgrade_started.http  get_authorized_versions.http  get_versions.http  last_successful_build.http  packages_by_version.http  packages_by_version_local.http  update_info_by_version.http  upgrade_authorized.http
socket_write/: .cproject  .project  socket_wirte.cpp  socket_write.cpp
spawn_sample/: .cproject  .project  spawn_demo.cpp
split_join/: .cproject  .project  split_join.cpp
ssl_verify/: CMakeLists.txt  ssl_verify.cpp
state_machine/: .cproject  IdleState.cpp  IdleState.hpp  IdleTask.cpp  IdleTask.hpp  Server.cpp  Server.hpp  Service.cpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  StopState.cpp  StopState.hpp  StopTask.cpp  StopTask.hpp  Task.cpp  Task.hpp  state_machine.cpp
std_chrono/: .cproject  .project  CMakeLists.txt  std_chrono.cpp
template_test/: .cproject  .project  BaseClass.cpp  BaseClass.hpp  CMakeLists.txt  Concrete.cpp  Concrete.hpp  TemplateFuncClass.hpp  TemplateFuncClass.ipp  TemplateTest.cpp  TemplateTest.hpp  template_test.cpp
thread_interrupt/: .cproject  .project  thread_interrupt.cpp
thrift/: control4.thrift  sample.thrift
thrift/compute_client/: .project  ComputeClient.cpp
thrift/compute_server/: .project  ComputeServer.cpp
thrift/director/: .project  (+8 more)
timer_expire/: .cproject  .project  CMakeLists.txt  timer_expire.cpp
tz_value/: CMakeLists.txt  tz_value.cpp
update_database/: .cproject  .project  Device.cpp  Device.hpp  DevicePackage.cpp  DevicePackage.hpp  DeviceType.cpp  DeviceType.hpp  DeviceTypePackage.cpp  DeviceTypePackage.hpp  DeviceUpdateInfo.cpp  DeviceUpdateInfo.hpp  Package.cpp  Package.hpp  update_database.cpp
url_encode/: CMakeLists.txt  url_encode.cpp
valid_future/: CMakeLists.txt  valid_future.cpp
yaml_parse/: CMakeLists.txt  restrictions.yaml  update-info.xml  update-info_3.6.0.987654-res  yaml_parse.cpp
(+35 files in other folders)
